--- a/Week_2/day_5-weekly/package.json
+++ b/Week_2/day_5-weekly/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "day_5-weekly",
+  "name": "meteo_app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,15 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
-    "bootstrap-icons": "^1.10.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.1",
-    "sass": "^1.61.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
